--- a/.github/ISSUE_TEMPLATE/nova-traducao.yml
+++ b/.github/ISSUE_TEMPLATE/nova-traducao.yml
@@ -15,8 +15,8 @@ body:
     attributes:
       label: "Sistema"
       options:
-        - "CPS-1"
-        - "CPS-2"
+        - CPS-1
+        - CPS-2
         - "JAMMA PCB"
         - "Neo Geo"
         - "Commodore CDTV"
