--- a/.github/ISSUE_TEMPLATE/nova-traducao.yml
+++ b/.github/ISSUE_TEMPLATE/nova-traducao.yml
@@ -69,7 +69,7 @@ body:
     id: game_category
     attributes:
       label: Categoria do Jogo
-      multiple: trie
+      multiple: true
       options:
         - Ação
         - Adulto
