--- a/.github/ISSUE_TEMPLATE/nova-traducao.yml
+++ b/.github/ISSUE_TEMPLATE/nova-traducao.yml
@@ -14,6 +14,7 @@ body:
     id: system
     attributes:
       label: "Sistema"
+      description: Selecione um Sistema
       options:
         - "CPS-1"
         - "CPS-2"
@@ -51,6 +52,7 @@ body:
     id: platform
     attributes:
       label: Plataforma
+      description: Selecione uma Plataforma
       options:
         - "Arcade"
         - "Computador"
@@ -69,6 +71,7 @@ body:
     id: game_category
     attributes:
       label: Categoria do Jogo
+      description: Selecione uma ou mais Categorias
       multiple: true
       options:
         - Ação
@@ -158,6 +161,7 @@ body:
     id: patch_type
     attributes:
       label: "Tipo de Patch"
+      description: Selecione um tipo de Patch
       options:
         - APS
         - BPS
@@ -184,6 +188,14 @@ body:
       label: "Link para o patch da tradução"
       description: "Inserir sem http: ou https:"
       placeholder: "//meusite.com/patch-da-traducao.zip"
+    validations:
+      required: true
+  - type: textarea
+    id: patch_description
+    attributes:
+      label: Descrição da Tradução
+      placeholder: Insira aqui a descrição e informações extras sobre a tradução
+      render: markdown
     validations:
       required: true
 
