--- a/.github/ISSUE_TEMPLATE/nova-traducao.yml
+++ b/.github/ISSUE_TEMPLATE/nova-traducao.yml
@@ -16,36 +16,49 @@ body:
       label: "Sistema"
       description: Selecione um Sistema
       options:
+        - "32X"
+        - "3D0"
+        - "Android"
+        - "Celular"
+        - "Colecovision"
+        - "Commodore CDTV"
         - "CPS-1"
         - "CPS-2"
-        - "JAMMA PCB"
-        - "Neo Geo"
-        - "Commodore CDTV"
-        - "MSX"
-        - "PC-98"
-        - "X68000"
-        - "3D0"
-        - "32X"
-        - "Colecovision"
+        - "Dingoo"
         - "Dreamcast"
         - "Famicom Disk System"
+        - "Game Boy Advance"
+        - "Game Boy Color"
+        - "Game Boy"
         - "Game Cube"
+        - "Game Gear"
+        - "JAMMA PCB"
         - "Master System"
         - "Mega Drive"
+        - "MSX"
+        - "Neo Geo Pocket"
+        - "Neo Geo"
         - "NES"
+        - "Nintendo 3DS"
         - "Nintendo 64"
+        - "Nintendo DS"
         - "PC Engine"
-        - "Playstation"
+        - "PC-98"
         - "Playstation 2"
         - "Playstation 3"
+        - "Playstation"
+        - "PSP"
         - "Saturn"
         - "Sega CD"
         - "SG-1000"
         - "Super NES"
-        - "Wii"
+        - "Watara Supervision"
         - "Wii U"
-        - "Xbox"
+        - "Wii"
+        - "Wonder Swan Color"     
+        - "X68000"
         - "Xbox 360"
+        - "Xbox"
     validations:
       required: true
   - type: dropdown
